# gpt-burn

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yaml
examples/: tokenize.rs
src/: lib.rs  main.rs  model.rs  run.rs  tokenizer.rs  train.rs
