[package]
name = "gpt-burn"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.13", features = [
    "fusion",
    "ndarray",
    "train",
    "vision",
    "wgpu",
] }
bincode = "1"
clap = { version = "4", features = ["derive"] }
indicatif = { version = "0.17", features = ["rayon"] }
rand = "0.8"
rayon = "1"
serde = { version = "1", features = ["derive"] }
